[package]
name = "quadtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.35.2", features = ["ttf"]}
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "quadtree_benchmark"
harness = false